adicionando algumas pastas e arquivos

--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Página de teste</title>
+
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<script ></script>
+	<script></script>
 </head>
 <body>
-	<h2>Minha página no GitHub.io</h2>
+	<style>
+		body{
+			background-color: #000;
+			color: red;
+		}
+	</style>
+	<div style="text-align: center; align: center;">
+		<h2>Em construção...</h2>
+		<img src="img/seitan.jpg" alt="papai ama vocês">
+
+		<p>Seitan - Todos os direitos reservados - 2017</p>
+	</div>
+	
 </body>
 </html>
