adicionando algumas pastas e arquivos

--- a/index.html
+++ b/index.html
@@ -3,23 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Página de teste</title>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script ></script>
-	<script></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
-	<style>
-		body{
-			background-color: #000;
-			color: red;
-		}
-	</style>
-	<div style="text-align: center; align: center;">
-		<h2>Em construção...</h2>
-		<img src="img/seitan.jpg" alt="papai ama vocês">
-
-		<p>Seitan - Todos os direitos reservados - 2017</p>
+	<div class="container">
+		<h1>Em construção</h1>
 	</div>
 	
 </body>
