--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Em construção</h1>
-		<?php
-			echo "<br>Visitas". $a;
-		?>  
+		<h1>Em construção</h> 
 	</div>
 	
 </body>
