--- a/index.html
+++ b/index.html
@@ -2,25 +2,17 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>Página de teste</title>
+	<title>Emerson Nascimento</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="assets/css/style.css">
+
 	<script>
- 		 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
- 		 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  		 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  		 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  		ga('create', 'UA-101904750-1', 'auto');
- 		ga('send', 'pageview');
-
+ 		 
 	</script>
 </head>
 <body>
-	<div class="container">
-		<h1>Em construção</h> 
-	</div>
+
 	
+
 </body>
 </html>
