adicionando estilizações iniciais

--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
 	<meta charset="UTF-8">
 	<title>Emerson Nascimento</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/style.css">
-
-	<script>
- 		 
-	</script>
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-
-	<h3>Fazendo...</h3>
+	<nav class="nav-topo">
+		<div class="container">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Sobre</a></li>
+				<li><a href="#">Portifólio</a></li>
+				<li><a href="#">Contato</a></li>
+			</ul>
+		</div>
+	</nav>
+	<header>
+		<div class="container">
+			<h1>Emerson F. Nascimento</h1>
+			<h3>Desenvolvedor Fullstack</h3>
+		</div>
+	</header>
 
 </body>
 </html>
