adicionando layout responsivo

--- a/index.html
+++ b/index.html
@@ -8,22 +8,52 @@
 	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-	<nav class="nav-topo">
-		<div class="container">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Sobre</a></li>
-				<li><a href="#">Portifólio</a></li>
-				<li><a href="#">Contato</a></li>
-			</ul>
-		</div>
+	<nav class="zona black" style="margin-bottom:0;">
+		<ul class="nav-top">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Stacks</a></li>
+			<li><a href="#">Portifólio</a></li>
+			<li class="push"><a href="#">Contato</a></li>
+		</ul>
 	</nav>
 	<header>
-		<div class="container">
-			<h1>Emerson F. Nascimento</h1>
-			<h3>Desenvolvedor Fullstack</h3>
+		<div class="container violet zona">
+			<h1 class="autor">Emerson Freitas <br> <span class="titulo">Fullstack Developer Jr.</span></h1>
 		</div>
 	</header>
 
+	<section>
+		<div class="zona">
+			<h2>Stacks</h2>
+			<div class="grid-wrapper">
+				<div class="box">HTML</div>
+				<div class="box">CSS</div>
+				<div class="box">Javascript</div>
+				<div class="box">React</div>
+				<div class="box">Express</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="portifolio">
+		<div class="zona">
+			<h2>Projetos feito para treinar</h2>
+			<div class=" grid-wrapper">
+				<div class="box">projeto 1</div>
+				<div class="box">projeto 2</div>
+				<div class="box">projeto 3</div>
+			</div>
+		</div>
+		<div class="zona">
+			<h2>Projetos feito para clientes</h2>
+			<div class="grid-wrapper">
+				<div class="box">projeto 1</div>
+				<div class="box">projeto 2</div>
+				<div class="box">projeto 3</div>
+			</div>
+		</div>
+	</section>
+
+	<footer>Emerson Freitas - Web Developer</footer>
 </body>
 </html>
